--- a/01Data_preparation_all.ipynb
+++ b/01Data_preparation_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\3817827875.py:5: DtypeWarning: Columns (22) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\3817827875.py:5: DtypeWarning: Columns (22) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  d2016 = pd.read_csv(path + \"ligue180-2016.csv\", encoding='utf-8-sig', delimiter=';')\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\3817827875.py:15: DtypeWarning: Columns (20,21,22,41,42,43,46,52,56,57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\3817827875.py:15: DtypeWarning: Columns (20,21,22,41,42,43,46,52,56,57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  d2022_2 = pd.read_csv(path + \"ligue180-segundo-semestre-2022.csv\", encoding='utf-8-sig', delimiter=';')\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\3817827875.py:16: DtypeWarning: Columns (34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\3817827875.py:16: DtypeWarning: Columns (34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  d2023 = pd.read_csv(path + \"ligue180-primeiro-semestre-2023.csv\", encoding='utf-8-sig', delimiter=';')\n"
      ]
     }
@@ -58,18 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\3632634151.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\3632634151.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  d2014['data_atendimento'] = pd.to_datetime(d2014['data_atendimento'], dayfirst = True)\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\3632634151.py:4: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\3632634151.py:4: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  d2016['data_atendimento'] = pd.to_datetime(d2016['data_atendimento'], dayfirst = True)\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\3632634151.py:16: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\3632634151.py:16: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S.%f format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
       "  d2023_2['Data_de_cadastro'] = pd.to_datetime(d2023_2['Data_de_cadastro'], dayfirst = True)\n"
      ]
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,29 +126,29 @@
       "<>:109: SyntaxWarning: invalid escape sequence '\\C'\n",
       "<>:117: SyntaxWarning: invalid escape sequence '\\C'\n",
       "<>:119: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:37: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:37: SyntaxWarning: invalid escape sequence '\\C'\n",
       "  'Raça\\Cor da vítima': 'Raça_Cor_da_vítima', 'Etnia da vítima': 'Etnia_da_vítima',\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:45: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:45: SyntaxWarning: invalid escape sequence '\\C'\n",
       "  'Religião do suspeito': 'Religião_do_suspeito', 'Raça\\Cor do suspeito': 'Raça_Cor_do_suspeito',\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:47: SyntaxWarning: invalid escape sequence '\\P'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:47: SyntaxWarning: invalid escape sequence '\\P'\n",
       "  'Vínculo Órgão\\PJ do suspeito': 'Vínculo_Órgão_PJ_do_suspeito'})\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:61: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:61: SyntaxWarning: invalid escape sequence '\\C'\n",
       "  'Raça\\Cor da vítima': 'Raça_Cor_da_vítima', 'Etnia da vítima': 'Etnia_da_vítima',\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:69: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:69: SyntaxWarning: invalid escape sequence '\\C'\n",
       "  'Religião do suspeito': 'Religião_do_suspeito', 'Raça\\Cor do suspeito': 'Raça_Cor_do_suspeito',\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:71: SyntaxWarning: invalid escape sequence '\\P'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:71: SyntaxWarning: invalid escape sequence '\\P'\n",
       "  'Vínculo Órgão\\PJ do suspeito': 'Vínculo_Órgão_PJ_do_suspeito'})\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:85: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:85: SyntaxWarning: invalid escape sequence '\\C'\n",
       "  'Raça\\Cor da vítima': 'Raça_Cor_da_vítima', 'Etnia da vítima': 'Etnia_da_vítima',\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:93: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:93: SyntaxWarning: invalid escape sequence '\\C'\n",
       "  'Religião do suspeito': 'Religião_do_suspeito', 'Raça\\Cor do suspeito': 'Raça_Cor_do_suspeito',\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:95: SyntaxWarning: invalid escape sequence '\\P'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:95: SyntaxWarning: invalid escape sequence '\\P'\n",
       "  'Vínculo Órgão\\PJ do suspeito': 'Vínculo_Órgão_PJ_do_suspeito'})\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:109: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:109: SyntaxWarning: invalid escape sequence '\\C'\n",
       "  'Raça\\Cor da vítima': 'Raça_Cor_da_vítima', 'Etnia da vítima': 'Etnia_da_vítima',\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:117: SyntaxWarning: invalid escape sequence '\\C'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:117: SyntaxWarning: invalid escape sequence '\\C'\n",
       "  'Religião do suspeito': 'Religião_do_suspeito', 'Raça\\Cor do suspeito': 'Raça_Cor_do_suspeito',\n",
-      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_19852\\1333662984.py:119: SyntaxWarning: invalid escape sequence '\\P'\n",
+      "C:\\Users\\ChiaraVogt\\AppData\\Local\\Temp\\ipykernel_1364\\1333662984.py:119: SyntaxWarning: invalid escape sequence '\\P'\n",
       "  'Vínculo Órgão\\PJ do suspeito': 'Vínculo_Órgão_PJ_do_suspeito'})\n"
      ]
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,6 +365,26 @@
    "outputs": [],
    "source": [
     "data_all_2020.to_csv('data_all_2020.csv', index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1739566, 66)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_all_2020.shape"
    ]
   }
  ],
