--- a/Latex_Masterarbeit/Literatur.bib
+++ b/Latex_Masterarbeit/Literatur.bib
@@ -1,5 +1,33 @@
 ﻿% This file was created with Citavi 6.8.0.0
 
+@book{Atwan.2022,
+ abstract = {Perform time series analysis and forecasting confidently with this Python code bank and reference manual Key Features Explore forecasting and anomaly detection techniques using statistical, machine learning, and deep learning algorithms Learn different techniques for evaluating, diagnosing, and optimizing your models Work with a variety of complex data with trends, multiple seasonal patterns, and irregularities Book Description Time series data is everywhere, available at a high frequency and volume. It is complex and can contain noise, irregularities, and multiple patterns, making it crucial to be well-versed with the techniques covered in this book for data preparation, analysis, and forecasting. This book covers practical techniques for working with time series data, starting with ingesting time series data from various sources and formats, whether in private cloud storage, relational databases, non-relational databases, or specialized time series databases such as InfluxDB. Next, you'll learn strategies for handling missing data, dealing with time zones and custom business days, and detecting anomalies using intuitive statistical methods, followed by more advanced unsupervised ML models. The book will also explore forecasting using classical statistical models such as Holt-Winters, SARIMA, and VAR. The recipes will present practical techniques for handling non-stationary data, using power transforms, ACF and PACF plots, and decomposing time series data with multiple seasonal patterns. Later, you'll work with ML and DL models using TensorFlow and PyTorch. Finally, you'll learn how to evaluate, compare, optimize models, and more using the recipes covered in the book. What you will learn Understand what makes time series data different from other data Apply various imputation and interpolation strategies for missing data Implement different models for univariate and multivariate time series Use different deep learning libraries such as TensorFlow, Keras, and PyTorch Plot interactive time series visualizations using hvPlot Explore state-space models and the unobserved components model (UCM) Detect anomalies using statistical and machine learning methods Forecast complex time series with multiple seasonal patterns Who this book is for This book is for data analysts, business analysts, data scientists, data engineers, or Python developers who want practical Python recipes for time series analysis and forecasting techniques. Fundamental knowledge of Python programming is required. Although having a basic math and statistics background will be beneficial, it is not necessary. Prior experience working with time series data to solve business problems will also help you to better utilize and apply the different recipes in this book.},
+ author = {Atwan, Tarek A.},
+ year = {2022},
+ title = {{TIME SERIES ANALYSIS WITH PYTHON COOKBOOK: Practical recipes for exploratory data analysis, data preparation, forecasting, and model evaluation}},
+ url = {https://learning.oreilly.com/library/view/-/9781801075541/?ar},
+ address = {Erscheinungsort nicht ermittelbar},
+ publisher = {{PACKT PUBLISHING LIMITED}},
+ isbn = {978-1801075541}
+}
+
+
+@misc{BalancoLigue180.2015,
+ author = {{Secretaria de Pol{\'i}ticas para as Mulheres}},
+ date = {2015},
+ title = {{Balan{\c{c}}o 2014: Ligue 180 - Central de Atendimento {\`a} Mulher}},
+ address = {Bras{\'i}lia/DF, Brasil}
+}
+
+
+@misc{BalancoLigue180.2020,
+ author = {{Minist{\'e}rio da Mulher, da Fam{\'i}lia e dos Direitos Humanos}},
+ date = {2020},
+ title = {{Balan{\c{c}}o 2019: Ligue 180 - Central de Atendimento {\`a} Mulher}},
+ address = {Bras{\'i}lia/DF, Brasil}
+}
+
+
 @book{Brownlee.2020,
  author = {Brownlee, Jason},
  year = {2020},
@@ -17,8 +45,8 @@
  publisher = {{Springer Vieweg}},
  isbn = {978-3-658-31937-3},
  editor = {Ege, B{\"o}rte{\c{c}}in and Paschke, Adrian},
- file = {https://www.gbv.de/dms/tib-ub-hannover/1758300167.pdf},
- file = {http://deposit.dnb.de/cgi-bin/dokserv?id=afed4e1df3794f428bb0934cd15b307a&prov=M&dok_var=1&dok_ext=htm}
+ file = {http://deposit.dnb.de/cgi-bin/dokserv?id=afed4e1df3794f428bb0934cd15b307a&prov=M&dok_var=1&dok_ext=htm},
+ file = {https://www.gbv.de/dms/tib-ub-hannover/1758300167.pdf}
 }
 
 
