--- a/Latex_Masterarbeit/Literatur.bib
+++ b/Latex_Masterarbeit/Literatur.bib
@@ -64,6 +64,17 @@
 }
 
 
+@book{Hyndman.May2018,
+ author = {Hyndman, Rob J. and Athanasopoulos, George},
+ year = {May 2018},
+ title = {{Forecasting: Principles and practice}},
+ address = {Lexington, Ky.},
+ edition = {2nd edition},
+ publisher = {{Otexts online open-access textbook}},
+ isbn = {978-0987507112}
+}
+
+
 @book{Montgomery.2015,
  abstract = {Praise for the First Edition '...[t]he book is great for readers who need to apply the methods and models presented but have little background in mathematics and statistics.' -MAA Reviews Thoroughly updated throughout, Introduction to Time Series Analysis and Forecasting, Second Editionpresents the underlying theories of time series analysis that are needed to analyze time-oriented data and construct real-world short- to medium-term statistical forecasts.    Authored by highly-experienced academics and professionals in engineering statistics, the Second Editionfeatures discussions on both popular and modern time series methodologies as well as an introduction to Bayesian methods in forecasting. Introduction to Time Series Analysis and Forecasting, Second Editionalso includes: Over 300 exercises from diverse disciplines including health care, environmental studies, engineering, and financeMore than 50 programming algorithms using JMP{\circledR}, SAS{\circledR}, and R that illustrate the theory and practicality of forecasting techniques in the context of time-oriented data New material  on frequency domain and spatial temporal data analysisExpanded coverage of the variogram and spectrum with applications as well as transfer and intervention model functionsA supplementary website featuring  PowerPoint{\circledR} slides, data sets, and select solutions to the problems Introduction to Time Series Analysis and Forecasting, Second Editionis an ideal textbook upper-undergraduate and graduate-levels courses in forecasting and time series. The book is also an excellent reference for practitioners and researchers who need to model and analyze time series data to generate forecasts. Douglas C. Montgomery, PhD,is Regents' Professor and ADU Foundation Professor of Engineering at Arizona State University. With over 35 years of academic and consulting experience, Dr. Montgomery has authored or coauthored over 250 journal articles and 13 books. His research interests include design and analysis of experiments, statistical methods for process monitoring and optimization, and the analysis of time-oriented data. Cheryl L. Jennings, PhD,is a Process Design Consultant with Bank of America. An active member of both the American Statistical Association and the American Society for Quality, her areas of research and profession interest include Six Sigma, modeling and analysis, and process control and improvement. Murat Kulahci, PhD,is Associate Professor of Informatics and Mathematical Modelling at the Technical University of Denmark. The author of over 30 journal articles, Dr. Kulahci's research interests include time series analysis, design of experiments, and statistical process control and monitoring.},
  author = {Montgomery, Douglas C. and Jennings, Cheryl L. and Kulahci, Murat},
@@ -75,6 +86,21 @@
  publisher = {Wiley},
  isbn = {978-1-118-74511-3},
  series = {{Wiley series in probability and statistics}}
+}
+
+
+@book{Vogel.2015,
+ abstract = {Zuverl{\"a}ssige Aussagen {\"u}ber die weitere Entwicklung unserer Volkswirtschaft, der G{\"u}ter- und Finanzm{\"a}rkte oder eines Betriebes sind nicht nur f{\"u}r Politiker und Unternehmer von gro{\ss}er Bedeutung, sondern betreffen auch jeden Einzelnen. In diesem Buch wird in kompakter Form die Fortsetzung einer zeitlich erhobenen Datenreihe in die Zukunft behandelt. Zahlreiche, mit realen Daten berechnete Beispiele erm{\"o}glichen es, die Verfahren und quantitativen Prognosetechniken nachzuvollziehen. Dabei werden auch Hinweise zum Einsatz der Statistik-Software R gegeben. Viele Abbildungen veranschaulichen das Vorgehen und die Interpretation der Ergebnisse. Der Inhalt: - Allgemeine Prognosetechniken und Prognosefehler, - Theoretische Grundlagen von Zeitreihen, - Komponentenmodelle, - ARMA-Modelle, - ARIMA- und SARIMA-Modelle, - Volatilit{\"a}tsmodelle.},
+ author = {Vogel, J{\"u}rgen},
+ year = {2015},
+ title = {{Prognose von Zeitreihen: Eine Einf{\"u}hrung f{\"u}r Wirtschaftswissenschaftler}},
+ price = {Pb. : EUR 24.99 (DE)},
+ address = {Wiesbaden},
+ publisher = {{Springer Gabler}},
+ isbn = {978-3-658-06836-3},
+ file = {http://deposit.dnb.de/cgi-bin/dokserv?id=4893893&prov=M&dok_var=1&dok_ext=htm},
+ file = {http://d-nb.info/1062820770/04},
+ file = {https://swbplus.bsz-bw.de/bsz425461866cov.jpg}
 }
 
 
