--- a/21SARIMA.ipynb
+++ b/21SARIMA.ipynb
@@ -1575,53 +1575,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'squeeze'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[77], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjoblib\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Residuen extrahieren\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m residuals_hourly \u001b[38;5;241m=\u001b[39m \u001b[43msarima_model_hourly\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresid\u001b[49m\n\u001b[0;32m      6\u001b[0m residuals_daily \u001b[38;5;241m=\u001b[39m sarima_model_daily\u001b[38;5;241m.\u001b[39mresid\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Als CSV speichern (gut für Inspektion)\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\ChiaraVogt\\miniconda3\\Lib\\site-packages\\statsmodels\\base\\wrapper.py:40\u001b[0m, in \u001b[0;36mResultsWrapper.__getattribute__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     38\u001b[0m     obj \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mwrap_output(obj, how[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;241m*\u001b[39mhow[\u001b[38;5;241m1\u001b[39m:])\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m how:\n\u001b[1;32m---> 40\u001b[0m     obj \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrap_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhow\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obj\n",
-      "File \u001b[1;32mc:\\Users\\ChiaraVogt\\miniconda3\\Lib\\site-packages\\statsmodels\\base\\data.py:442\u001b[0m, in \u001b[0;36mModelData.wrap_output\u001b[1;34m(self, obj, how, names)\u001b[0m\n\u001b[0;32m    440\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mattach_columns(obj)\n\u001b[0;32m    441\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m how \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrows\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 442\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mattach_rows\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    443\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m how \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcov\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m    444\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mattach_cov(obj)\n",
-      "File \u001b[1;32mc:\\Users\\ChiaraVogt\\miniconda3\\Lib\\site-packages\\statsmodels\\base\\data.py:576\u001b[0m, in \u001b[0;36mPandasData.attach_rows\u001b[1;34m(self, result)\u001b[0m\n\u001b[0;32m    573\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mattach_rows\u001b[39m(\u001b[38;5;28mself\u001b[39m, result):\n\u001b[0;32m    574\u001b[0m     \u001b[38;5;66;03m# assumes if len(row_labels) > len(result) it's bc it was truncated\u001b[39;00m\n\u001b[0;32m    575\u001b[0m     \u001b[38;5;66;03m# at the front, for AR lags, for example\u001b[39;00m\n\u001b[1;32m--> 576\u001b[0m     squeezed \u001b[38;5;241m=\u001b[39m \u001b[43mresult\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msqueeze\u001b[49m()\n\u001b[0;32m    577\u001b[0m     k_endog \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mynames, ndmin\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    578\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m k_endog \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m squeezed\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m==\u001b[39m (k_endog,):\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'squeeze'"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import joblib\n",
-    "\n",
-    "# Residuen extrahieren\n",
-    "residuals_hourly = sarima_model_hourly.resid\n",
-    "residuals_daily = sarima_model_daily.resid\n",
-    "\n",
-    "# Als CSV speichern (gut für Inspektion)\n",
-    "residuals_hourly.to_csv(\"residuals_hourly.csv\", index=True)\n",
-    "residuals_daily.to_csv(\"residuals_daily.csv\", index=True)\n",
-    "\n",
-    "# Als Pickle speichern (effizient für Pandas)\n",
-    "residuals_hourly.to_pickle(\"residuals_hourly.pkl\")\n",
-    "residuals_daily.to_pickle(\"residuals_daily.pkl\")\n",
-    "\n",
-    "# Alternativ: Mit joblib speichern\n",
-    "joblib.dump(residuals_hourly, \"residuals_hourly.joblib\")\n",
-    "joblib.dump(residuals_daily, \"residuals_daily.joblib\")\n",
-    "\n",
-    "# SARIMA-Modell ohne Daten speichern\n",
-    "sarima_model_hourly.save(\"sarima_model_hourly.pkl\", remove_data=True)\n",
-    "sarima_model_daily.save(\"sarima_model_daily.pkl\", remove_data=True)\n",
-    "\n",
-    "print(\"Residuen wurden erfolgreich gespeichert! ✅\")\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1650,6 +1603,18 @@
     "df_hourly[\"date\"] = pd.to_datetime(df_hourly[\"date\"])  # Falls noch nicht im Datetime-Format\n",
     "df_hourly = df_hourly.set_index(\"date\")  # Datum als Index setzen\n",
     "df_hourly[\"weekday\"] = df_hourly.index.dayofweek  # Montag=0, Sonntag=6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_daily_test = df_daily_test.drop(columns=[\"Unnamed: 0\"])  # Unnötige Spalte löschen\n",
+    "df_daily_test[\"date\"] = pd.to_datetime(df_daily_test[\"date\"])  # Falls noch nicht im Datetime-Format\n",
+    "df_daily_test = df_daily_test.set_index(\"date\")  # Datum als Index setzen\n",
+    "df_daily_test[\"weekday\"] = df_daily_test.index.dayofweek  # Montag=0, Sonntag=6"
    ]
   },
   {
